--- a/index.html
+++ b/index.html
@@ -1,25 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <!-- Render All HTML Elements Normally -->
-    <link rel="stylesheet" href="css/normalize.css" />
-    <!-- Font Awesome 6.2.0 library -->
-    <link rel="stylesheet" href="css/all.min.css" />
-    <!-- Main css file -->
-    <link rel="stylesheet" href="css/master.css" />
-    <!-- Custom framework -->
-    <link rel="stylesheet" href="css/framework.css" />
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dashboard</title>
+  <!-- Render All HTML Elements Normally -->
+  <link rel="stylesheet" href="css/normalize.css" />
+  <!-- Font Awesome 6.2.0 library -->
+  <link rel="stylesheet" href="css/all.min.css" />
+  <!-- Custom framework -->
+  <link rel="stylesheet" href="css/framework.css" />
+  <!-- Main css file -->
+  <link rel="stylesheet" href="css/master.css" />
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <div class="page d-flex">
+    <aside class="p-relative p-20">
+      <h3 class="p-relative txt-c">Elzero</h3>
+      <ul>
+        <li>
+          <a href="index.html" class="active d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-square-poll-vertical fa-fw"></i>
+            <span class="hide-mobile">
+              Dashboard
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/settings.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-gear fa-fw"></i>
+            <span class="hide-mobile">
+              Settings
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/profile.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-user fa-fw"></i>
+            <span class="hide-mobile">
+              Profile
+            </span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/projects.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-diagram-project fa-fw"></i>
+            <span class="hide-mobile">Projects</span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/courses.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-graduation-cap fa-fw"></i>
+            <span class="hide-mobile">Courses</span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/friends.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-user-group fa-fw"></i>
+            <span class="hide-mobile">Friends</span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/files.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-file fa-fw"></i>
+            <span class="hide-mobile">Files</span>
+          </a>
+        </li>
+        <li>
+          <a href="pages/plans.html" class="d-flex align-center rad-6 c-black p-10 fs-14">
+            <i class="fa-solid fa-calendar-check fa-fw"></i>
+            <span class="hide-mobile">Plans</span>
+          </a>
+        </li>
+      </ul>
+    </aside>
+    <main class="grow-1">
+      <div class="top-bar p-10 between-flex">
+        <div class="search p-relative ml-5">
+          <input type="search" name="" id="" class="p-5 rad-6" placeholder="Type A Keyword" />
+        </div>
+        <div class="icons d-flex align-center">
+          <span class="notifications p-relative">
+            <i class="fa-regular fa-bell fa-large"></i>
+          </span>
+          <img src="images/avatar.png" alt="" class="rad-circle" />
+        </div>
+      </div>
+      <section class="main-content p-10 p-8-mobile">
+        <h1 class="main-title">Dashboard</h1>
+        <div class="main-wrapper mt-30 d-grid">
+          <div class="welcome bg-white rad-6 txt-c-mobile">
+            <div class="head bg-eee d-flex justify-between   ">
+                <div class="text p-10">
+                  <h2 class="mb-5">Welcome</h2>
+                  <span class="c-gray">Elzero</span>
+                </div>
+                <img src="images/welcome.png" alt="" class="hide-mobile" />
+            </div>
+            <img src="images/avatar.png" alt="" class="rad-circle" />
+            <div class="body pt-20 pb-20 d-flex align-center d-block-mobile">
+              <div class="grow-1">
+                <div class="mb-5">Osama Elzero</div>
+                <span class="c-gray">Developer</span>
+              </div>
+              <div class="grow-1">
+                <div class="mb-5">80</div>
+                <span class="c-gray">Projects</span>
+              </div>
+              <div class="grow-1">
+                <div class="mb-5">$8500</div>
+                <span class="c-gray">Earned</span>
+              </div>
+            </div>
+            <a href="pages/profile.html" class="visit rad-6">Profile</a>
+          </div>
+          
+        </div>
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
