done statistics section ,latest news and latest tasks

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="main-content p-10 p-8-mobile">
         <h1 class="main-title">Dashboard</h1>
         <div class="main-wrapper mt-30 d-grid">
-          <div class="welcome bg-white rad-6 txt-c-mobile">
+          <div class="welcome bg-white rad-10 txt-c-mobile">
             <div class="head bg-eee d-flex justify-between   ">
               <div class="text p-10">
                 <h2 class="mb-5">Welcome</h2>
@@ -120,10 +120,9 @@
                 <span class="c-gray">Earned</span>
               </div>
             </div>
-            <a href="pages/profile.html"
-              class="visit rad-6 bg-blue btn-shape trans-hov-fx w-fit d-block">Profile</a>
+            <a href="pages/profile.html" class="visit rad-6 bg-blue btn-shape trans-hov-fx w-fit d-block">Profile</a>
           </div>
-          <div class="quick-draft bg-white p-10 rad-6">
+          <div class="quick-draft bg-white p-10 rad-10">
             <div class="mb-20">
               <h2 class="mb-5">Quick Draft</h2>
               <span class="c-gray">Write A Draft</span>
@@ -143,7 +142,7 @@
               <span class="c-gray">Targets Of The Year</span>
             </div>
             <div class="details">
-              <div class="target-row center-flex gap-10 mb-10">
+              <div class="target-row center-flex gap-10 mb-20">
                 <div class="icon center-flex blue">
                   <i class="fa-solid fa-dollar fa-lg blue"></i>
                 </div>
@@ -157,7 +156,7 @@
                   </div>
                 </div>
               </div>
-              <div class="target-row center-flex gap-10 mb-10">
+              <div class="target-row center-flex gap-10 mb-20">
                 <div class="icon center-flex orange">
                   <i class="fa-solid fa-code fa-lg orange"></i>
                 </div>
@@ -171,7 +170,7 @@
                   </div>
                 </div>
               </div>
-              <div class="target-row center-flex gap-10 mb-10">
+              <div class="target-row center-flex gap-10 mb-20">
                 <div class="icon center-flex green">
                   <i class="fa-solid fa-user fa-lg green"></i>
                 </div>
@@ -187,6 +186,132 @@
               </div>
             </div>
           </div>
+          <div class="stat p-10 rad-10 bg-white">
+            <div class="mb-20">
+              <h2 class="mb-5">Tickets Statistics</h2>
+              <span class="c-gray">Everything About Support Tickets</span>
+            </div>
+            <div class="stat-content  d-flex flex-wrap">
+              <div class="stat-item  rad-6 txt-c mb-15">
+                <i class="fa-regular fa-rectangle-list fa-2x list-icon"></i>
+                <span class="d-block fs-26 fw-b mt-10 mb-10">2500</span>
+                <span class="d-block c-gray fs-14">Total</span>
+              </div>
+              <div class="stat-item  rad-6 txt-c mb-15">
+                <i class="fa-solid fa-spinner fa-2x pending-icon"></i>
+                <span class="d-block fs-26 fw-b mt-10 mb-10">500</span>
+                <span class="d-block c-gray fs-14">Pending</span>
+              </div>
+              <div class="stat-item rad-6 txt-c mb-15">
+                <i class="fa-regular fa-circle-check fa-2x closed-icon"></i>
+                <span class="d-block fs-26 fw-b mt-10 mb-10">1900</span>
+                <span class="d-block c-gray fs-14">Closed</span>
+              </div>
+              <div class="stat-item  rad-6 txt-c mb-15">
+                <i class="fa-regular fa-rectangle-xmark fa-2x delete-icon"></i>
+                <span class="d-block fs-26 fw-b mt-10 mb-10">100</span>
+                <span class="d-block c-gray fs-14">Deleted</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-news bg-white rad-10 p-10">
+            <div class="mb-20">
+              <h2 class="">Latest News</h2>
+            </div>
+            <div class="news-item center-flex gap-10 mb-20 ">
+              <div class="image rad-6 overflow-h fs-0">
+                <img src="images/news-01.png" alt="" />
+              </div>
+              <div class="news-text between-flex grow-1 ">
+                <div>
+                  <h3 class="mb-3 news-title">Created SASS Section</h3>
+                  <span class="c-gray">New SASS Examples &amp; Tutorials</span>
+                </div>
+                <span class="bg-eee p-5 rad-6 fs-12">3 Day Ago</span>
+              </div>
+
+            </div>
+            <div class="news-item center-flex gap-10 mb-20 ">
+              <div class="image rad-6 overflow-h fs-0">
+                <img src="images/news-02.png" alt="" />
+              </div>
+              <div class="news-text between-flex grow-1 ">
+                <div>
+                  <h3 class="mb-3 news-title">Changed The Design</h3>
+                  <span class="c-gray">A Brand New Website Design</span>
+                </div>
+                <span class="bg-eee p-5 rad-6 fs-12">5 Day Ago</span>
+              </div>
+
+            </div>
+            <div class="news-item center-flex gap-10 mb-20 ">
+              <div class="image rad-6 overflow-h fs-0">
+                <img src="images/news-03.png" alt="" />
+              </div>
+              <div class="news-text between-flex grow-1 ">
+                <div>
+                  <h3 class="mb-3 news-title">Team Increased</h3>
+                  <span class="c-gray">3 Developers Joined The Team</span>
+                </div>
+                <span class="bg-eee p-5 rad-6 fs-12">7 Day Ago</span>
+              </div>
+
+            </div>
+            <div class="news-item center-flex gap-10 mb-20 ">
+              <div class="image rad-6 overflow-h fs-0">
+                <img src="images/news-04.png" alt="" />
+              </div>
+              <div class="news-text between-flex grow-1 ">
+                <div>
+                  <h3 class="mb-3 news-title">Added Payment Gateway</h3>
+                  <span class="c-gray">Many New Payment Gateways Added</span>
+                </div>
+                <span class="bg-eee p-5 rad-6 fs-12">9 Day Ago</span>
+              </div>
+
+            </div>
+          </div>
+          <div class="latest-tasks bg-white rad-10 p-10">
+            <div class="mb-20">
+              <h2 class="">Latest Tasks</h2>
+            </div>
+            <div class="task between-flex mb-15 pb-20">
+              <div class="task-text">
+                <h3 class="fs-16 mb-5">Record One New Video</h3>
+                <p class="c-gray fs-14 m-0">Record Python Create Exe Project</p>
+              </div>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
+            </div>
+            <div class="task between-flex mb-15 pb-20">
+              <div class="task-text">
+                <h3 class="fs-16 mb-5">Write Article</h3>
+                <p class="c-gray fs-14 m-0">Write Low Level Vs High Level Languages</p>
+              </div>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
+            </div>
+            <div class="task between-flex mb-15 pb-20">
+              <div class="task-text">
+                <h3 class="fs-16 mb-5">Finish Project</h3>
+                <p class="c-gray fs-14 m-0">Publish Academy Programming Project</p>
+              </div>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
+            </div>
+            <div class="task between-flex mb-15 pb-20 deleted-task">
+              <div class="task-text">
+                <h3 class="fs-16 mb-5 deleted-text">Attend The Meeting</h3>
+                <p class="c-gray fs-14 m-0 deleted-text">Attend The Project Business Analysis Meeting</p>
+              </div>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon cursor-nodrop"></i>
+            </div>
+            <div class="task between-flex mb-15 pb-20">
+              <div class="task-text">
+                <h3 class="fs-16 mb-5">Finish Lesson</h3>
+                <p class="c-gray fs-14 m-0">Finish Teaching Flex Box</p>
+              </div>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
+            </div>
+          </div>
+          
         </div>
       </section>
     </main>
