--- a/index.html
+++ b/index.html
@@ -276,42 +276,42 @@
               <h2 class="">Latest Tasks</h2>
             </div>
             <div class="task between-flex mb-15 pb-20">
-              <div class="task-text">
+              <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Record One New Video</h3>
                 <p class="c-gray fs-14 m-0">Record Python Create Exe Project</p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
             <div class="task between-flex mb-15 pb-20">
-              <div class="task-text">
+              <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Write Article</h3>
                 <p class="c-gray fs-14 m-0">Write Low Level Vs High Level Languages</p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
             <div class="task between-flex mb-15 pb-20">
-              <div class="task-text">
+              <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Finish Project</h3>
                 <p class="c-gray fs-14 m-0">Publish Academy Programming Project</p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
-            <div class="task between-flex mb-15 pb-20 deleted-task">
-              <div class="task-text">
-                <h3 class="fs-16 mb-5 deleted-text">Attend The Meeting</h3>
-                <p class="c-gray fs-14 m-0 deleted-text">Attend The Project Business Analysis Meeting</p>
+            <div class="task between-flex mb-15 pb-20 done">
+              <div class="task-text grow-1">
+                <h3 class="fs-16 mb-5">Attend The Meeting</h3>
+                <p class="c-gray fs-14 m-0">Attend The Project Business Analysis Meeting</p>
               </div>
-              <i class="fa-regular fa-trash-can fa-lg recyle-icon cursor-nodrop"></i>
+              <i class="fa-regular fa-trash-can fa-lg recyle-icon"></i>
             </div>
             <div class="task between-flex mb-15 pb-20">
-              <div class="task-text">
+              <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Finish Lesson</h3>
                 <p class="c-gray fs-14 m-0">Finish Teaching Flex Box</p>
               </div>
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
           </div>
-          
+
         </div>
       </section>
     </main>
