done latest-uploads,last-project progress, reminders, latest-post and social media stats

--- a/index.html
+++ b/index.html
@@ -272,9 +272,7 @@
             </div>
           </div>
           <div class="latest-tasks bg-white rad-10 p-10">
-            <div class="mb-20">
-              <h2 class="">Latest Tasks</h2>
-            </div>
+            <h2 class="mb-20">Latest Tasks</h2>
             <div class="task between-flex mb-15 pb-20">
               <div class="task-text grow-1">
                 <h3 class="fs-16 mb-5">Record One New Video</h3>
@@ -311,7 +309,193 @@
               <i class="fa-regular fa-trash-can fa-lg recyle-icon c-pointer"></i>
             </div>
           </div>
-
+          <div class="top-search bg-white rad-10 p-10">
+            <h2 class="mb-20">Latest Tasks</h2>
+            <div class="top-search-content">
+              <div class="title between-flex mb-20">
+                <span class="c-gray fw-600">Keyword</span>
+                <span class="c-gray fw-600">Search Count</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Programming</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">220</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Javascript</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">180</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Php</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">160</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Code</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">145</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Design</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">100</span>
+              </div>
+              <div class="top-search-row between-flex mb-20">
+                <span class="keyword fw-500">Logic</span>
+                <span class="keyword-freq fs-14 rad-6 p-8 bg-eee fw-500">95</span>
+              </div>
+            </div>
+          </div>
+          <div class="latest-uploads bg-white rad-10 p-10">
+            <h2 class="mb-20">Latest Uploads</h2>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/pdf.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">my-file.pdf</span>
+                  <span class="c-gray">Elzero</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">2.9mb</span>
+            </div>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/avi.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">My-Video-File.avi</span>
+                  <span class="c-gray">Admin</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">4.9mb</span>
+            </div>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/psd.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">My-Psd-File.psd</span>
+                  <span class="c-gray">Osama</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">4.5mb</span>
+            </div>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/zip.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">My-Zip-File.zip</span>
+                  <span class="c-gray">User</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">8.9mb</span>
+            </div>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/dll.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">My-DLL-File.dll</span>
+                  <span class="c-gray">Admin</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">4.9mb</span>
+            </div>
+            <div class="file between-flex pb-10 mb-10">
+              <div class="file-desc d-flex align-center gap-10">
+                <img src="images/eps.svg" alt="" class="" />
+                <div class="file-name">
+                  <span class="mb-5 d-block fw-500">My-Eps-File.eps</span>
+                  <span class="c-gray">Designer</span>
+                </div>
+              </div>
+              <span class="p-8 bg-eee rad-6 fw-500 fs-14">8.9mb</span>
+            </div>
+          </div>
+          <div class="last-project-progress bg-white rad-10 p-10 p-relative">
+            <h2 class="mb-20">Last Project Progress</h2>
+            <ul class="last-project-list p-relative">
+              <li class="done d-flex align-center mt-25">Got The Project</li>
+              <li class="done d-flex align-center mt-25">Started The Project</li>
+              <li class="done d-flex align-center mt-25">The Project About To Finish</li>
+              <li class="current d-flex align-center mt-25">Test The Project</li>
+              <li class="d-flex align-center mt-25">Finish The Project And Get Money</li>
+            </ul>
+            <img src="images/project.png" class="p-absolute hide-mobile" alt="" />
+          </div>
+          <div class="reminders bg-white p-10 rad-10">
+            <h2 class="mb-20">Remainders</h2>
+            <ul class="reminders-list">
+              <li class="mb-20 d-flex align-center gap-15">
+                <span class="rad-circle blue shrink-0"></span>
+                <div class="p-relative pl-20 reminder-desc blue">
+                  <h3 class="mb-5 fs-16">Check My Tasks List</h3>
+                  <span class="c-gray fs-15">28/09/2022 - 12:00am</span>
+                </div>
+              </li>
+              <li class="mb-20 d-flex align-center gap-15">
+                <span class="rad-circle green shrink-0"></span>
+                <div class="p-relative pl-20 reminder-desc green">
+                  <h3 class="mb-5 fs-16">Check My Projects</h3>
+                  <span class="c-gray fs-15">26/10/2022 - 12:00am</span>
+                </div>
+              </li>
+              <li class="mb-20 d-flex align-center gap-15">
+                <span class="rad-circle orange shrink-0"></span>
+                <div class="p-relative pl-20 reminder-desc orange">
+                  <h3 class="mb-5 fs-16">Call All My Clients</h3>
+                  <span class="c-gray fs-15">05/11/2022 - 12:00am</span>
+                </div>
+              </li>
+              <li class="mb-20 d-flex align-center gap-15">
+                <span class="rad-circle red shrink-0"></span>
+                <div class="p-relative pl-20 reminder-desc red">
+                  <h3 class="mb-5 fs-16">Finish The Development Workshop</h3>
+                  <span class="c-gray fs-15">20/12/2022 - 12:00am</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="latest-post bg-white rad-10 p-10">
+            <h2 class="mb-20">Latest Post</h2>
+            <div class="post-head d-flex align-center gap-10">
+              <img src="images/avatar.png" class="rad-circle avatar" alt="" />
+              <div>
+                <h3 class="mb-5 fs-16">Osama Elzero</h3>
+                <span class="c-gray">About 3 Hours Ago</span>
+              </div>
+            </div>
+            <p class="mt-20 pt-20 pb-20 mb-20 fw-500 txt-c-mobile">
+              You Can Fool All Of The People Some Of The Time, And Some Of The People All of The Time, But You Can't
+              Fool All Of The People All Of The Time.
+            </p>
+            <div class="reacts between-flex">
+              <span class="c-gray">
+                <i class="fa-regular fa-heart"></i>
+                1.8K
+              </span>
+              <span class="c-gray">
+                <i class="fa-regular fa-comments"></i>
+                500
+              </span>
+            </div>
+          </div>
+          <div class="social-media-stats bg-white rad-10 p-10">
+            <h2 class="mb-20">Social Media Stats</h2>
+            <div class="social-box twitter between-flex mb-15">
+              <i class="fa-brands fa-twitter fa-2x center-flex mr-15 c-white social-icon twitter-icon"></i>
+              <span class="followers-num fw-600 grow-1">90K Followers</span>
+              <a href="#" class="btn-shape link fs-14">Follow</a>
+            </div>
+            <div class="social-box facebook between-flex mb-15">
+              <i class="fa-brands fa-facebook-f fa-2x center-flex mr-15 c-white social-icon facebook-icon"></i>
+              <span class="followers-num fw-600 grow-1">2M Like</span>
+              <a href="#" class="btn-shape link fs-14">Like</a>
+            </div>
+            <div class="social-box youtube between-flex mb-15">
+              <i class="fa-brands fa-youtube fa-2x center-flex mr-15 c-white social-icon youtube-icon"></i>
+              <span class="followers-num fw-600 grow-1">1M Subs</span>
+              <a href="#" class="btn-shape link fs-14">Subscribe</a>
+            </div>
+            <div class="social-box linkedin between-flex mb-15">
+              <i class="fa-brands fa-linkedin fa-2x center-flex mr-15 c-white social-icon linkedin-icon"></i>
+              <span class="followers-num fw-600 grow-1">70K Followers</span>
+              <a href="#" class="btn-shape link fs-14">Follow</a>
+            </div>
+          </div>
         </div>
       </section>
     </main>
