done general info section and security info section in settings page

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -104,17 +104,76 @@
             </div>
             <div class="between-flex mb-20">
               <div>
-                <span class="mb-5 d-block">Website Control</span>
-                <p class="c-gray m-0 fs-14">Open/Close Website And Type The Reason</p>
+                <span class="mb-5 d-block fw-500">Website Control</span>
+                <p class="c-gray m-0 fs-13">Open/Close Website And Type The Reason</p>
               </div>
               <label>
                 <input type="checkbox" class="toggle-checkbox" checked />
                 <div class="toggle-switch"></div>
               </label>
             </div>
-            <textarea class="close-message w-full p-10 mb-30 d-block" placeholder="Close Message Content"></textarea>
+            <textarea class="close-message w-full p-10 d-block caret-color-blue"
+              placeholder="Close Message Content"></textarea>
           </div>
+          <div class="general-info bg-white p-15 rad-10">
+            <div class="mb-20">
+              <h2 class="mb-5">General Info</h2>
+              <span class="c-gray fs-14">General Information About Your Account</span>
+            </div>
+            <div class="mb-15">
+              <label for="fname" class="d-block mb-10 c-gray">First Name</label>
+              <input type="text" name="" id="fname" class="b-ccc p-5 w-full rad-6 p-10 caret-color-blue"
+                placeholder="First Name" />
+            </div>
+            <div class="mb-15">
+              <label for="lname" class="d-block mb-10 c-gray">Last Name</label>
+              <input type="text" name="" id="lname" class="b-ccc p-5 w-full rad-6 p-10 caret-color-blue"
+                placeholder="Last Name" />
+            </div>
+            <div>
+              <label for="email" class="d-block mb-10 c-gray">Email</label>
+              <input type="email" name="" id="email" class="email b-ccc p-5 rad-6 p-10 caret-color-blue"
+                placeholder="o@nn.sa" disabled />
+              <a href="#" class="c-blue">Change</a>
+            </div>
+          </div>
+          <div class="security-info bg-white p-15 rad-10">
+            <div class="mb-20">
+              <h2 class="mb-5">Security Info</h2>
+              <span class="c-gray fs-14">Security Information About Your Account</span>
+            </div>
+            <div class="between-flex mb-15 pb-20 bb-eee">
+              <div>
+                <span class="mb-5 d-block fw-500">Password</span>
+                <p class="c-gray m-0 fs-13">Last Change On 25/10/2021</p>
+              </div>
+              <a href="" class="btn-shape bg-blue">Change</a>
+            </div>
+            <div class="between-flex mb-15 pb-20 bb-eee">
+              <div>
+                <span class="mb-5 d-block fw-500">Two-Factor Authentication</span>
+                <p class="c-gray m-0 fs-13">Enable/Disable The Feature</p>
+              </div>
+              <label>
+                <input type="checkbox" class="toggle-checkbox" checked />
+                <div class="toggle-switch"></div>
+              </label>
+            </div>
+            <div class="between-flex">
+              <div>
+                <span class="mb-5 d-block fw-500">Devices</span>
+                <p class="c-gray m-0 fs-13">Check The Login Devices List</p>
+              </div>
+              <a href="" class="btn-shape-black bg-eee fw-500">Devices</a>
+            </div>
+          </div>
+          <div class="social-info bg-white p-15 rad-10">
+            <div class="mb-20">
+              <h2 class="mb-5">Social Info</h2>
+              <span class="c-gray fs-14">Social Media Information</span>
+            </div>
 
+          </div>
         </div>
       </section>
   </div>
